# mr-guile-lsp-server

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: backend.rs  bundle.rs  capabilities.rs  diagnostics.rs  documents.rs  guile.rs  lib.rs  main.rs  parser.rs  position.rs  scheduler.rs  text.rs
tests/: integration.rs  lsp_session.rs  lsp_smoke.sh
tests/scheme/: test-helpers.scm
