[package]
name = "mr-guile-lsp-server"
version = "0.1.1"
edition = "2021"
description = "A Guile 3.0.11 LSP server for the Helix editor, built with tower-lsp"
license = "MIT"
repository = "https://github.com/mslugyfw/mr-guile-lsp-server"
keywords = ["lsp", "guile", "scheme", "helix", "language-server"]
categories = ["development-tools"]

[lib]
name = "mr_guile_lsp_server"
path = "src/lib.rs"

[[bin]]
name = "mr-guile-lsp-server"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[build-dependencies]
# build.rs uses std only (include_str!)

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt", "time"] }
tempfile = "3"
url = "2"

[profile.release]
opt-level = 3
